[BUG] fix masonry hide/visibility in details-parts

--- a/css/smk_modif.css
+++ b/css/smk_modif.css
@@ -256,3 +256,11 @@ a.divLink {
 .matrix-equalized .matrix-tile-meta {
   height: 27px;
 }
+
+/*
+.tab-content {
+  left: 0px !important;
+  position: relative !important;
+  top: 0px !important;  
+}
+*/
